# RAG

./: .gitignore  Makefile  README.md  pyproject.toml
data/raw/vllm-0.10.1/: CODE_OF_CONDUCT.md
datasets_public/public/UnansweredQuestions/: dataset_code_public.json
src/: __main__.py  answerer.py  cli.py  defines.py  display.py  error.py  hash.py  index.py  indexer.py  logger.py  paths.py  print.py  searcher.py  translator.py  types.py
src/core/: answerer.py  evaluator.py  indexer.py  searcher.py
src/display/: results.py
src/schemas/: manifest.py  models.py
src/services/: translator.py
src/utils/: hash.py  logger.py  text_splitter.py
