[project]
name = "RAG"
version = "0.0.1"
description = "Retrieval augmented generation system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"bm25s>=0.3.4",
	"chromadb>=1.5.8",
	"fire>=0.7.1",
	"flake8>=7.3.0",
	"langchain>=1.2.15",
	"langchain-community>=0.4.1",
	"langchain-text-splitters>=1.1.2",
	"mypy>=1.19.1",
	"pydantic>=2.12.5",
	"tqdm>=4.67.3",
]
