[project]
name = "RAG"
version = "0.0.1"
description = "Retrieval augmented generation system"
readme = "README.md"
requires-python = "==3.13.13"
dependencies = [
	"accelerate>=1.13.0",
	"bm25s>=0.3.3",
	"chromadb>=1.5.8",
	"fire>=0.7.1",
	"langchain>=1.2.15",
	"langchain-text-splitters>=1.1.1",
	"pydantic>=2.13.2",
	"rich>=15.0.0",
	"sacremoses>=0.1.1",
	"sentence-transformers>=5.4.1",
	"sentencepiece>=0.2.1",
	"tqdm>=4.67.3",
]
